--- a/client/src/assets/theme.css
+++ b/client/src/assets/theme.css
@@ -1536,12 +1536,12 @@
   border-radius: 4px;
 }
 .p-button:enabled:hover {
-  background: rgba(159, 168, 218, 0.92);
+  background: rgba(251, 192, 45, 0.92);
   color: #121212;
   border-color: transparent;
 }
 .p-button:enabled:active {
-  background: rgba(159, 168, 218, 0.68);
+  background: rgba(251, 192, 45, 0.68);
   color: #121212;
   border-color: transparent;
 }
@@ -1671,11 +1671,11 @@
 
 .p-button.p-button-secondary, .p-buttonset.p-button-secondary > .p-button, .p-splitbutton.p-button-secondary > .p-button {
   color: #121212;
-  background: #F48FB1;
+  background: #ffac30;
   border: 0 none;
 }
 .p-button.p-button-secondary:enabled:hover, .p-buttonset.p-button-secondary > .p-button:enabled:hover, .p-splitbutton.p-button-secondary > .p-button:enabled:hover {
-  background: rgba(244, 143, 177, 0.92);
+  background: rgba(255, 172, 48, 0.92);
   color: #121212;
   border-color: transparent;
 }
@@ -1683,39 +1683,39 @@
   box-shadow: none;
 }
 .p-button.p-button-secondary:enabled:active, .p-buttonset.p-button-secondary > .p-button:enabled:active, .p-splitbutton.p-button-secondary > .p-button:enabled:active {
-  background: rgba(244, 143, 177, 0.68);
+  background: rgba(255, 172, 48, 0.68);
   color: #121212;
   border-color: transparent;
 }
 .p-button.p-button-secondary.p-button-outlined, .p-buttonset.p-button-secondary > .p-button.p-button-outlined, .p-splitbutton.p-button-secondary > .p-button.p-button-outlined {
   background-color: transparent;
-  color: #F48FB1;
+  color: #ffac30;
   border: 1px solid;
 }
 .p-button.p-button-secondary.p-button-outlined:enabled:hover, .p-buttonset.p-button-secondary > .p-button.p-button-outlined:enabled:hover, .p-splitbutton.p-button-secondary > .p-button.p-button-outlined:enabled:hover {
   background: rgba(244, 143, 177, 0.04);
-  color: #F48FB1;
+  color: #ffac30;
   border: 1px solid;
 }
 .p-button.p-button-secondary.p-button-outlined:enabled:active, .p-buttonset.p-button-secondary > .p-button.p-button-outlined:enabled:active, .p-splitbutton.p-button-secondary > .p-button.p-button-outlined:enabled:active {
   background: rgba(244, 143, 177, 0.16);
-  color: #F48FB1;
+  color: #ffac30;
   border: 1px solid;
 }
 .p-button.p-button-secondary.p-button-text, .p-buttonset.p-button-secondary > .p-button.p-button-text, .p-splitbutton.p-button-secondary > .p-button.p-button-text {
   background-color: transparent;
-  color: #F48FB1;
+  color: #ffac30;
   border-color: transparent;
 }
 .p-button.p-button-secondary.p-button-text:enabled:hover, .p-buttonset.p-button-secondary > .p-button.p-button-text:enabled:hover, .p-splitbutton.p-button-secondary > .p-button.p-button-text:enabled:hover {
   background: rgba(244, 143, 177, 0.04);
   border-color: transparent;
-  color: #F48FB1;
+  color: #ffac30;
 }
 .p-button.p-button-secondary.p-button-text:enabled:active, .p-buttonset.p-button-secondary > .p-button.p-button-text:enabled:active, .p-splitbutton.p-button-secondary > .p-button.p-button-text:enabled:active {
   background: rgba(244, 143, 177, 0.16);
   border-color: transparent;
-  color: #F48FB1;
+  color: #ffac30;
 }
 
 .p-button.p-button-info, .p-buttonset.p-button-info > .p-button, .p-splitbutton.p-button-info > .p-button {
@@ -2452,12 +2452,12 @@
   align-items: center;
 }
 .fc .fc-toolbar .fc-button:enabled:hover {
-  background: rgba(159, 168, 218, 0.92);
+  background: rgba(251, 192, 45, 0.92);
   color: #121212;
   border-color: transparent;
 }
 .fc .fc-toolbar .fc-button:enabled:active {
-  background: rgba(159, 168, 218, 0.68);
+  background: rgba(251, 192, 45, 0.68);
   color: #121212;
   border-color: transparent;
 }
@@ -3457,7 +3457,7 @@
   right: -1.25rem;
 }
 .p-overlaypanel .p-overlaypanel-close:enabled:hover {
-  background: rgba(159, 168, 218, 0.92);
+  background: rgba(251, 192, 45, 0.92);
   color: #121212;
 }
 .p-overlaypanel:after {
@@ -3564,12 +3564,12 @@
 }
 
 .p-fileupload-choose:not(.p-disabled):hover {
-  background: rgba(159, 168, 218, 0.92);
+  background: rgba(251, 192, 45, 0.92);
   color: #121212;
   border-color: transparent;
 }
 .p-fileupload-choose:not(.p-disabled):active {
-  background: rgba(159, 168, 218, 0.68);
+  background: rgba(251, 192, 45, 0.68);
   color: #121212;
   border-color: transparent;
 }
@@ -4723,7 +4723,7 @@
   line-height: 1.5rem;
 }
 .p-badge.p-badge-secondary {
-  background-color: #F48FB1;
+  background-color: #ffac30;
   color: #121212;
 }
 .p-badge.p-badge-success {
@@ -4829,10 +4829,10 @@
   transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
 }
 .p-scrolltop.p-link {
-  background: #F48FB1;
+  background: #ffac30;
 }
 .p-scrolltop.p-link:hover {
-  background: rgba(244, 143, 177, 0.92);
+  background: rgba(255, 172, 48, 0.92);
 }
 .p-scrolltop .p-scrolltop-icon {
   font-size: 1.5rem;
@@ -5013,10 +5013,10 @@
   min-width: auto;
 }
 .p-button:enabled:focus {
-  background: rgba(159, 168, 218, 0.76);
+  background: rgba(251, 192, 45, 0.76);
 }
 .p-button:enabled:active {
-  background: rgba(159, 168, 218, 0.68);
+  background: rgba(251, 192, 45, 0.68);
 }
 .p-button .p-ink {
   background-color: rgba(255, 255, 255, 0.32);
@@ -5049,10 +5049,10 @@
 }
 
 .p-button.p-button-secondary:enabled:focus, .p-buttonset.p-button-secondary > .p-button:enabled:focus, .p-splitbutton.p-button-secondary > .p-button:enabled:focus {
-  background: rgba(244, 143, 177, 0.76);
+  background: rgba(255, 172, 48, 0.76);
 }
 .p-button.p-button-secondary:enabled:active, .p-buttonset.p-button-secondary > .p-button:enabled:active, .p-splitbutton.p-button-secondary > .p-button:enabled:active {
-  background: rgba(244, 143, 177, 0.68);
+  background: rgba(255, 172, 48, 0.68);
 }
 .p-button.p-button-secondary.p-button-text:enabled:focus, .p-button.p-button-secondary.p-button-outlined:enabled:focus, .p-buttonset.p-button-secondary > .p-button.p-button-text:enabled:focus, .p-buttonset.p-button-secondary > .p-button.p-button-outlined:enabled:focus, .p-splitbutton.p-button-secondary > .p-button.p-button-text:enabled:focus, .p-splitbutton.p-button-secondary > .p-button.p-button-outlined:enabled:focus {
   background: rgba(244, 143, 177, 0.12);
@@ -5281,7 +5281,7 @@
 }
 
 .p-carousel .p-carousel-indicators .p-carousel-indicator.p-highlight button {
-  background: #F48FB1;
+  background: #ffac30;
   color: #121212;
 }
 
@@ -5561,11 +5561,11 @@
   padding: 1rem;
 }
 .p-galleria .p-galleria-indicators .p-galleria-indicator.p-highlight button {
-  background: #F48FB1;
+  background: #ffac30;
   color: #121212;
 }
 .p-galleria.p-galleria-indicator-onitem .p-galleria-indicators .p-galleria-indicator.p-highlight button {
-  background: rgba(244, 143, 177, 0.68);
+  background: rgba(255, 172, 48, 0.68);
   color: #121212;
 }
 
