--- a/client/src/assets/theme.css
+++ b/client/src/assets/theme.css
@@ -10,7 +10,7 @@
     --surface-e: #1e1e1e;
     --surface-f: #262626;
     --text-color: rgba(255, 255, 255, 0.87);
-    --text-color-secondary: textSecondaryColor;
+    --text-color-secondary: rgba(255, 255, 255, 0.6);
     --primary-color: #fbc02d;
     --primary-color-text: #121212;
     --font-family: Roboto, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
